# closure

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE_MIT  README.md
src/: lib.rs  main.rs
