[package]
name = "closure"
version = "0.1.1"
authors = ["oliver <oliver.giersch@b-tu.de>"]
description = "A macro for capturing variables on a per variable basis."
license = "MIT"
homepage = "https://github.com/oliver-giersch/closure.git"
repository = "https://github.com/oliver-giersch/closure.git"
keywords = ["closure", "capture", "macro"]
readme = "README.md"

[dependencies]