[package]
name = "closure"
description = "A macro for capturing variables on a per variable basis."
version = "0.3.0"
authors = ["oliver <oliver.giersch@b-tu.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oliver-giersch/closure.git"
edition = "2018"
keywords = ["closure", "capture", "macro"]
exclude = [".travis.yml"]
